biscuit-terminal/lib/src/components/snapshots/biscuit_terminal__components__horizontal_rule__tests__browser_line_circle_medium.snap
---
source: biscuit-terminal/lib/src/components/horizontal_rule.rs
expression: result
---
<svg width="100%" height="40" xmlns="http://www.w3.org/2000/svg" style="display: block; margin: 0 auto 0 auto;">
  <line x1="0" y1="50%" x2="45%" y2="50%" stroke="currentColor" stroke-width="4" stroke-linecap="round"/>
  <circle cx="50%" cy="50%" r="8" fill="none" stroke="currentColor" stroke-width="4"/>
  <line x1="55%" y1="50%" x2="100%" y2="50%" stroke="currentColor" stroke-width="4" stroke-linecap="round"/>
</svg>
