biscuit-terminal/lib/src/components/snapshots/biscuit_terminal__components__horizontal_rule__tests__terminal_ascii_curtain_rod.snap
---
source: biscuit-terminal/lib/src/components/horizontal_rule.rs
expression: result
---
[----------------------------------------------------------------------------]
